force-app/main/default/objects/Payer_Alias__c/Payer_Alias__c.object-meta.xml
<CustomObject>
    <label>Payer Alias</label>
    <nameField>
        <label>Payer Alias Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payer Aliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>