force-app/main/default/objects/Payer_Alias__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Payer Aliases</relationshipLabel>
    <relationshipName>Payer_Aliases</relationshipName>
    <type>Lookup</type>
</CustomField>