force-app/main/default/objects/Payer_Alias__c/validationRules/If_not_non_payer_must_have_insurance.validationRule-meta.xml
<ValidationRule>
    <fullName>If_not_non_payer_must_have_insurance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Non_Payer__c = false, ISBLANK( Insurance__c ))</errorConditionFormula>
    <errorMessage>There must be an insurance if the Alias is not a Non-Payer Alias</errorMessage>
</ValidationRule>